--- a/server/pom.xml
+++ b/server/pom.xml
@@ -16,6 +16,16 @@
 			<artifactId>data-model</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		 <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.2.Final</version>
+        </dependency>
 	</dependencies>
 
 </project>
